--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueCreateContent.cshtml
@@ -1,16 +1,12 @@
 ﻿@using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Admin.Venues
-@model ODK.Core.Chapters.Chapter
 
 <h2>Create new venue</h2>
 
-<form method="post" action`="/@Model.Name/Admin/Events/Venues/Create">
+<form method="post">
     @Html.AntiForgeryToken()
     
-    @await Html.PartialAsync("Admin/Venues/_VenueForm", new VenueFormViewModel
-    {
-        ChapterId = Model.Id
-    })
+    @await Html.PartialAsync("Admin/Venues/_VenueForm", new VenueFormViewModel())
     
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
