--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsForm.cshtml
@@ -34,19 +34,23 @@
 </div>
 
 <div class="form-group mb-3">
-    @Html.LabelFor(x => x.DefaultScheduledEmailDayOfWeek, new { @class = "form-label" })
-    @Html.DropDownListFor(x => x.DefaultScheduledEmailDayOfWeek, dayOfWeekOptions, " ", new { @class = "form-select" })
-</div>
-
-<div class="form-group mb-3">
-    @Html.LabelFor(x => x.DefaultScheduledEmailTimeOfDay, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_Tooltip", "Default scheduled email time when creating new events (24 hour clock, HH:MM)")
-    @Html.TextBoxFor(x => x.DefaultScheduledEmailTimeOfDay, new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.DefaultScheduledEmailTimeOfDay)
-</div>
-
-<div class="form-group mb-3">
     @Html.LabelFor(x => x.DefaultDescription, new { @class = "form-label" })
     @Html.TextAreaFor(x => x.DefaultDescription, new { @class = "form-control", rows = 8, data_html_editor = "" })
     @Html.ValidationMessageFor(x => x.DefaultDescription)
 </div>
+
+<fieldset disabled="@(Model.ScheduledEmailsEnabled ? null : "")">
+    <legend>Scheduled emails</legend>
+
+    <div class="form-group mb-3">
+        @Html.LabelFor(x => x.DefaultScheduledEmailDayOfWeek, new { @class = "form-label" })
+        @Html.DropDownListFor(x => x.DefaultScheduledEmailDayOfWeek, dayOfWeekOptions, " ", new { @class = "form-select" })
+    </div>
+
+    <div class="form-group mb-3">
+        @Html.LabelFor(x => x.DefaultScheduledEmailTimeOfDay, new { @class = "form-label" })
+        @await Html.PartialAsync("Components/_Tooltip", "Default scheduled email time when creating new events (24 hour clock, HH:MM)")
+        @Html.TextBoxFor(x => x.DefaultScheduledEmailTimeOfDay, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.DefaultScheduledEmailTimeOfDay)
+    </div>
+</fieldset>
